# talkat

./: .SRCINFO  .gitignore  .pre-commit-config.yaml  AUR_ROADMAP.md  CHANGELOG.md  CLAUDE.md  CLEANUP.md  CPU_OPTIMIZATION.md  LICENSE  MANIFEST.in  PKGBUILD  README.md  SUMMARY.md  TESTING.md  TESTING_GUIDE.md  dev.sh  pyproject.toml  setup.sh  talkat.desktop  talkat.install  talkat.service  test_volume.py  uinput.sh
.github/workflows/: aur-build.yml  ci.yml
docs/: future-work.md  v1.0.0-plan.md
src/talkat/: audio_utils.py  backends.py  cli.py  clipboard.py  config.py  devices.py  diagnostics.py  doctor.py  file_processor.py  focus.py  logging_config.py  long_dictation.py  main.py  model_manager.py  model_server.py  model_server_v2.py  paths.py  postprocess.py  process_manager.py  record.py  record.py.bak  record_improved.py  security.py  service.py
tests/: conftest.py  test_audio_utils.py  test_backends.py  test_cli.py  test_clipboard.py  test_config.py  test_diagnostics.py  test_doctor.py  test_file_processor.py  test_focus.py  test_integration_file_processor.py  test_integration_model_server.py  test_integration_transcription_client.py  test_language.py  test_listen.py  test_long_mode.py  test_main_helpers.py  test_model_manager.py  test_postprocess.py  test_postprocess_live.py  test_process_manager.py  test_security.py  test_segmentation.py  test_service.py  test_toggle_signal.py  test_vad.py
